Edited CSS and made small changes to HTML layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
         </style>
 </head>
 <body>
@@ -23,30 +23,35 @@
         <div class="hero">
             <div class="t-left">
                 <h1>This website is awesome</h1>
-                <p>This website has some subtext goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <p class="p-light">This website has some subtext goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <div>
+                    <button class="button b1">Sign Up</button>
+                </div>
             </div>  
             <div class="t-right">
-                <p>this is a placeholder for an image</p>
+                <p class="place">this is a placeholder for an image</p>
             </div>
         </div>
     </div>
     <div class="section2">
         <h2>Some random information</h2>
-        <div class="content1">
+        <div class="content-container">
+        <div class="content">
             <div class="content-box"></div>
-        <p>this is some subtext under an illustration or image</p>
+        <p class="p-dark">this is some subtext under an illustration or image</p>
         </div>
-        <div class="content2">
+        <div class="content">
             <div class="content-box"></div>
-        <p>this is some subtext under an illustration or image</p>
+        <p class="p-dark">this is some subtext under an illustration or image</p>
         </div>
-        <div class="content3">
+        <div class="content">
             <div class="content-box"></div>
-        <p>this is some subtext under an illustration or image</p>
+        <p class="p-dark">this is some subtext under an illustration or image</p>
         </div>
-        <div class="content4">
+        <div class="content">
             <div class="content-box"></div>
-        <p>this is some subtext under an illustration or image</p>
+        <p class="p-dark">this is some subtext under an illustration or image</p>
+        </div>
         </div>
     </div>
     <div class="section3">
@@ -56,16 +61,18 @@
         <h3>-Thor, God of Thunder</h3>
     </div>
     <div class="section4">
-        <div>
+        <div class="signup">
+            <div class="botton-left">
         <h3>Call to action! It’s time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
+        <p-light>Sign up for our product by clicking that button right over there!</p>
         </div>
-        <div>
-        <button type="button">Sign Up</button>
+        <div class="bottom-right">
+            <button class="button b2">Sign Up</button>
+            </div>
         </div>
-
     </div>
-
-
+<footer>
+    <p>Copyright © The Odin Project 2021</p>
+</footer>
 </body>
 </html>
